chore: release version 1.2.0